# EvolveProver

./: .env  main.py  pyproject.toml  quick_test.py  requirements.txt  run_tests.py  tree.txt
src/: __init__.py  config.py
src/models/: __init__.py  deepseek_prover_gguf.py  model_utils.py
tests/: __init__.py  test_setup.py
